--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "phpmailer/phpmailer": "^6.1",
+        "phpmailer/phpmailer": "6.1.6",
         "gumlet/php-image-resize": "^1.9"
     }
 }
