--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "phpmailer/phpmailer": "6.1.6",
-        "gumlet/php-image-resize": "^1.9"
+        "gumlet/php-image-resize": "^1.9",
+        "vlucas/phpdotenv": "^5.3"
     }
 }
